--- a/src/app/merchandise/delivery/packing-products/packing-products.component.html
+++ b/src/app/merchandise/delivery/packing-products/packing-products.component.html
@@ -13,7 +13,10 @@
 </div>
 <div mat-dialog-content>
   <div class="row">
-    <div class="col-sm-12 col-md-6 p-bottom-20px">
+    <div class="col-sm-12 col-md-6 p-margin-20px">
+      <div class="title">
+        Danh sách kiện hàng
+      </div>
       <p-table #dt [columns]="colSelectedTables" [value]="products" [(selection)]="selectedProducts"
         dataKey="merchandiseCode">
         <ng-template pTemplate="caption">
@@ -57,6 +60,9 @@
     </div>
 
     <div class="col-sm-12 col-md-6 p-bottom-20px">
+      <div class="title">
+        Danh sách gói kiện hàng
+      </div>
       <div *ngFor="let packages of productGrouped; let i = index;" class="package-config">
         <div class="package-header" [ngClass]="{ 'active':  packageIndexSelected == i }">
           <div class="package-infor">
