--- a/src/app/merchandise/delivery/merchandise-delivery.component.html
+++ b/src/app/merchandise/delivery/merchandise-delivery.component.html
@@ -33,7 +33,7 @@
                     <input type="text" class="form-control" id="deliveryRequestCd" name="deliveryRequestCd"
                            required #deliveryRequestCd="ngModel" ngModel
                            [(ngModel)]="deliveryRequestCode"
-                           (keydown.enter)="getDeliveryRequestByCode(deliveryRequestCd.value)">
+                           (keydown.enter)="getDeliveryRequestByCode(deliveryRequestCd.value, true)">
                 </div>
                 <p><span
                     class="font-weight-bold">Ngày tạo: </span>{{deliveryRequest.createdDate | date: 'dd/MM/yyyy hh:mm:ss' }}
@@ -103,36 +103,39 @@
                 <div class="merchandise-table-container">
                     <div class="table-wrapper">
                         <!-- rowExpandMode="single" -->
-                        <p-table [value]="dataSource.rows" [dataKey]="dataSource.grByField" [expandedRowKeys]="expandedRows">
+                        <p-table [value]="dataSource.rowsFilter" [dataKey]="dataSource.grByField" [expandedRowKeys]="expandedRows">
                             <ng-template pTemplate="header">
                                 <tr>
-                                    <th>Mã kiện</th>
+                                    <th  style="min-width: 200px;">Mã kiện</th>
                                     <th>Cân nặng</th>
                                     <th>Thể tích</th>
+                                    <th>Quy đổi</th>
                                 </tr>
                             </ng-template>
                             <ng-template pTemplate="body" #dt let-rowData let-rowIndex="rowIndex" let-expanded="expanded"  let-columns="columns" >
                                 <tr class="ui-widget-header" *ngIf="dataSource.rowGroupMetadata[rowData[dataSource.grByField]].index === rowIndex">
-                                    <td colspan="3">
+                                    <td colspan="4" class="group-header">
                                         <a href="#" [pRowToggler]="rowData">
-                                            <i
-                                                [ngClass]="expanded ? 'fa fa-fw fa-chevron-circle-down' : 'fa fa-fw fa-chevron-circle-right'"></i>
-                                            <span>Kiện số <strong>{{rowIndex}}</strong>: 
-                                            <span *ngIf="rowData[dataSource.grByField] != null; else nullParent">{{rowData[dataSource.grByField]}}</span>
+                                            <i [ngClass]="expanded ? 'pi pi-caret-down' : 'pi pi-caret-right' "></i>
+                                            
+                                            <span *ngIf="rowData[dataSource.grByField] != null; else nullParent">
+                                                <span>Kiện số <strong>{{rowIndex}}</strong> - Mã: </span>  {{ getMerchandiseCode(deliveryRequest.lsParentDetail,  rowData[dataSource.grByField])  }}
+                                            </span>
                                             <ng-template #nullParent>
                                                 Các kiện chưa thuộc gói nào
                                             </ng-template>
-                                            </span>
+                                            
                                         </a>
                                     </td>
                                 </tr>
                             </ng-template>
                             <ng-template pTemplate="rowexpansion" let-rowData let-rowIndex="rowIndex">
                                 <tr>
-                                    <td>{{rowData.merchandiseCode}}</td>
+                                    <td style="min-width: 200px;">{{rowData.merchandiseCode}}</td>
                                     <td> {{rowData.netWeight}} kg</td>
                                     <td> {{rowData.width}} x {{rowData.width}}
                                         x {{rowData.height}}</td>
+                                    <td> {{rowData.chargedWeight}} kg</td>
                                 </tr>
                             </ng-template>
                         </p-table>
@@ -189,7 +192,7 @@
                             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                         </table> -->
 
-                        <div *ngIf="dataSource.rows.length === 0" class="text-center p-2">Không có dữ liệu</div>
+                        <div *ngIf="dataSource.rowsFilter.length === 0" class="text-center p-2">Không có dữ liệu</div>
                         <mat-paginator class="mb-2" [pageSize]="10" showFirstLastButtons></mat-paginator>
                     </div>
                 </div>
