--- a/src/app/merchandise/delivery/packing-products/packing-products.component.html
+++ b/src/app/merchandise/delivery/packing-products/packing-products.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{ 'loading': isLoading}">
+<div [ngClass]="{ 'loading': isLoading}" class="wrap-dialog">
   <p-toast></p-toast>
   <p-confirmDialog appendTo="body" header="Confirmation" [autoZIndex]="false" [baseZIndex]="5000"
     icon="pi pi-exclamation-triangle">
@@ -121,5 +121,9 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div mat-dialog-actions>
+    <button pButton  (click)="close()" label="Hoàn tất" ></button>
   </div>
 </div>
