--- a/src/app/merchandise/delivery/packing-products/packing-products.component.html
+++ b/src/app/merchandise/delivery/packing-products/packing-products.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{ 'loading': isLoading}" class="wrap-dialog">
   <p-toast></p-toast>
   <p-confirmDialog appendTo="body" header="Confirmation" [autoZIndex]="false" [baseZIndex]="5000"
-    icon="pi pi-exclamation-triangle">
+    icon="pi pi-exclamation-triangle"  global="false">
   </p-confirmDialog>
 
   <div mat-dialog-title>
