--- a/src/app/merchandise/delivery/config-shipment/config-shipment.component.html
+++ b/src/app/merchandise/delivery/config-shipment/config-shipment.component.html
@@ -1,4 +1,6 @@
 <p-toast key="shipment"></p-toast>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-atom" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner>
+
 <div [ngClass]="{ 'loading': isLoading}" class="wrap-dialog">
   <p-toast></p-toast>
 
@@ -17,42 +19,33 @@
 
       <div class="control">
         <div class="label">Đơn vị vận chuyển: <span class="required"> * </span></div>
-        <p-dropdown [style]="{'width':'100%'}" [options]="lsTransporter" optionLabel="name" formControlName="transporterId"></p-dropdown>
+        <p-dropdown [style]="{'width':'100%'}" [options]="lsTransporter" formControlName="TransporterId"></p-dropdown>
       </div>
-      <div class="col alert alert-danger" role="alert" *ngIf="shipmentForm.controls.transporterId?.errors?.required
-         && shipmentForm.controls.transporterId?.touched">
+      <div class="col alert alert-danger" role="alert" *ngIf="shipmentForm.controls.TransporterId?.errors?.required
+         && shipmentForm.controls.TransporterId?.touched">
         Đơn vị vận chuyển là bắt buộc nhập
       </div>
 
+      <div style="color: #f44336;margin-bottom: 12px; font-size: 12px;">
+        <i >
+          <strong>Note: </strong>Sử dụng đơn vị vận chuyển BABUVI không cần nhập mã vận đơn
+        </i>
+      </div>
       <div class="control">
-        <div class="label">Mã vận đơn: <span class="required"> * </span></div>
-        <input pInputText type="text" formControlName="ParentMerchandiseWarehouseId">
-      </div>
-
-      <div class="col alert alert-danger" role="alert" *ngIf="shipmentForm.controls.ParentMerchandiseWarehouseId?.errors?.required
-      && shipmentForm.controls.ParentMerchandiseWarehouseId?.touched">
-        Mã vận đơn là bắt buộc nhập
-      </div>
-
-      <div class="control">
-        <div class="label">Tiền code: <span class="required"> * </span></div>
-        <input pInputText type="text" formControlName="CodAmount">
-      </div>
-
-      <div class="col alert alert-danger" role="alert" *ngIf="shipmentForm.controls.CodAmount?.errors?.required
-      && shipmentForm.controls.CodAmount?.touched">
-        Tiền code là bắt buộc nhập
+        <div class="label">Mã vận đơn: </div>
+        <input pInputText type="text" formControlName="TransporterPackageNumber">
       </div>
 
       <div class="control">
-        <div class="label">Tiền ship: <span class="required"> * </span></div>
-        <input pInputText type="text" formControlName="TotalAmount">
+        <div class="label">Tiền code:</div>
+        <input pInputText type="text"  mask="separator.0" thousandSeparator="." formControlName="CodAmount">
       </div>
 
-      <div class="col alert alert-danger" role="alert" *ngIf="shipmentForm.controls.TotalAmount?.errors?.required
-         && shipmentForm.controls.TotalAmount?.touched">
-        Tiền ship là bắt buộc nhập
+      <div class="control">
+        <div class="label">Tiền ship: </div>
+        <input pInputText type="text"  mask="separator.0" thousandSeparator="." formControlName="TotalAmount">
       </div>
+
     </form>
 
   </div>
