--- a/src/app/merchandise/delivery/merchandise-delivery.component.html
+++ b/src/app/merchandise/delivery/merchandise-delivery.component.html
@@ -3,6 +3,7 @@
 <p-confirmDialog appendTo="body" header="Xác nhận"
 icon="pi pi-exclamation-triangle">
 </p-confirmDialog>
+<p-toast></p-toast>
 
 <div class="btn-dashboard mb-2 p-2">
     <span class="top-feature">
@@ -145,17 +146,19 @@ icon="pi pi-exclamation-triangle">
                                                 </span>
 
 
-
-                                                <i class="pi pi-times-circle" matTooltip="Hủy giao hàng"
-                                                    matTooltipPosition="above"
-                                                    style="font-size: 2em; float: right; margin-right: 12px;"
-                                                    (click)="cancelShipment(rowData)"></i>
-
                                                 <i class="pi pi-shopping-cart" matTooltip="Giao hàng"
                                                     matTooltipPosition="above"
                                                     style="font-size: 2em; float: right; margin-right: 12px;"
+                                                    *ngIf="this.getMerchandiseInfor(this.deliveryRequest.lsParentDetail,rowData[this.dataSource.grByField]).shipment; else hasShipment"
                                                     (click)="addOrUpdateShipment(rowData)"></i>
-                                                
+
+                                                <ng-template #hasShipment>
+                                                    <i class="pi pi-times-circle" matTooltip="Hủy giao hàng"
+                                                    matTooltipPosition="above"
+                                                    style="font-size: 2em; float: right; margin-right: 12px;"
+                                                    (click)="cancelShipment(rowData)"></i>
+                                                </ng-template>
+
                                                 <i class="pi pi-print" matTooltip="In phiếu" matTooltipPosition="above"
                                                     style="font-size: 2em; float: right; margin-right: 12px;"
                                                     (click)="printExpBill()"></i>
