--- a/src/app/merchandise/delivery/print-bill/print-bill.component.html
+++ b/src/app/merchandise/delivery/print-bill/print-bill.component.html
@@ -15,7 +15,7 @@
           [styleSheetFile]="styleSheetFiles"
           [printDelay]="printDelay"
           mat-button [disabled]="loading['ship']" class="btn btn-primary d-block w-100 mb-3">In phiếu vận đơn 50x50</button>
-  <button ngxPrint printSectionId="print-section-form-3"
+  <button ngxPrint printSectionId="request-delivery-bill"
           [styleSheetFile]="styleSheetFiles"
           [printDelay]="printDelay"
           mat-button [disabled]="loading['request']" class="btn btn-primary d-block w-100 mb-3">In phiếu yêu cầu giao hàng</button>
@@ -84,7 +84,16 @@
       </div>
     </div>
   </div>
-  <div id="print-section-form-3">
+
+  <app-request-delivery-bill [printData]="{
+    deliveryRequest: deliveryRequest,
+    sumRequestWeight: sumRequestWeight,
+    merchandiseCode: deliveryRequestCode,
+    numOfBill: deliveryRequest.lsDetail?.length
+  }">
+
+  </app-request-delivery-bill>
+  <!-- <div id="request-delivery-bill">
     <div class="print-container">
       <div class="page">
         <div class="subpage">
@@ -137,7 +146,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div id="print-section-form-ycgh-50-50">
     <div class="print-container">
       <div class="page50">
